src/objects/inscor__Skill_Bill_Rate__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Bill_Rate__c</fullName>
        <label>Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Company_Bill_Rate__c</fullName>
        <formula>inscor__Bill_Rate__c /  BLANKVALUE( inscor__Exchange_Rate__c , 1)</formula>
        <label>Company Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Exchange_Rate__c</fullName>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Rate_Date__c</fullName>
        <label>Rate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Skill__c</fullName>
        <label>Skill</label>
        <referenceTo>inscor__Skill__c</referenceTo>
        <relationshipLabel>Skill Bill Rates</relationshipLabel>
        <relationshipName>Skill_Bill_Rates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Skill Bill Rate</label>
    <nameField>
        <displayFormat>SBR-{0}</displayFormat>
        <label>Skill Bill Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Skill Bill Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>